2003-05-19  Anna Marie Dirks  <anna@ximian.com>

	* my-evolution.glade: 	* my-evolution.glade: HIG-ified this 
	dialog by adding proper spacing/padding/stock buttons/etc. 
	Fixes bugs #41131, #41133.

2003-05-16  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary.c (destroy): Remove the weak pointer on priv->control.
	[#43117]

2003-05-16  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary-calendar.c (setup_calendar): Fix typo, celendar_path
	-> calendar_path.

2003-05-15  JP Rosevear  <jpr@ximian.com>

	Fixes #43101
	
	* e-summary-mail.c (e_summary_folder_unregister_storage): unref
	the storage after use not before

2003-05-15  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary.c (do_summary_print): Remove preview arg.  Also, make
	it destroy the dialog after a button has been clicked.
	(e_summary_set_control): Add casts to avoid compiler warnings.

2003-05-14  JP Rosevear  <jpr@ximian.com>

	* e-summary.h: fix up protos

	* e-summary.c (e_summary_get_control): accessor
	(e_summary_set_control): ditto
	(retrieve_shell_view_interface): util to get the shell view
	(e_summary_change_current_view): use it
	(e_summary_set_message): ditto
	(e_summary_unset_message): ditto

	* e-summary-mail.h: add proto

	* e-summary-mail.c (e_summary_mail_get_info): use the objref of
	the listener
	(e_summary_folder_unregister_storage): clean up a registered
	storage
	(e_summary_folder_register_storages): store the listener directly
	(folder_info_pb_changed): unref the listener once we are notified
	(lazy_register_storages): release and unref the property bag,
	event and listener
	(e_summary_folder_init_folder_store): track the listener
	(e_summary_folder_clear_folder_store): cleanup the folder store

	* e-summary-factory.c (control_activate_cb): we don't get the
	shell view here any more
	(e_summary_factory_new_control): don't pass in the shell, set the
	control on the summary

	* component-factory.c (owner_unset_cb): clear the folder store on
	destruction
